content/prod/bases/mail/service.yaml
# https://github.com/stefanprodan/podinfo/blob/4.0.6/kustomize/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: smtp
spec:
  type: ExternalName
  externalName: mailhog.mail.svc.cluster.local
