content/prod/bases/mail/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mail
  labels:
    app.kubernetes.io/name: mail
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - secretName: mail-ingress-tls
      hosts:
      - mailhog.ldaws.net
  rules:
    - host: mailhog.ldaws.net
      http:
        paths:
          - backend:
              serviceName: mailhog
              servicePort: http
